--- a/java.html
+++ b/java.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+            웹페이지
+        </title>
 
+    </head>
+    <body>
+        
+        <div>
+            <div style="width: 100%; height: 30%; background-color: darkred;" class="content" >
+                <p style="color: rgb(64, 202, 133);" >
+                    안녕하세요
+                </p>
+
+            </div>
+            <div>
+                <button class="btn" style="color: blanchedalmond; background-color: blueviolet;" type="button" onclick="location.href = 'java1.html'" >
+                    이동
+                    <!--
+                    홈페이지 이동
+    `               -->
+
+                </button>
+            </div>
+        </div>
+    </body>
+
+
+</html>
