--- a/java.html
+++ b/java.html
@@ -16,7 +16,7 @@
 
             </div>
             <div>
-                <button class="btn" style="color: blanchedalmond; background-color: blueviolet;" type="button" onclick="location.href = 'java1.html'" >
+                <button class="btn" style="color: blanchedalmond; background-color: blueviolet;" type="button" onclick="location.href = 'https://softoasis2022.github.io/page/java1.html'" >
                     이동
                     <!--
                     홈페이지 이동
