--- a/java.html
+++ b/java.html
@@ -2,28 +2,49 @@
 <html>
     <head>
         <title>
-            웹페이지
+            소프트오아시스
         </title>
+        <style>
+            userbase{
+                float: right;
+                margin: auto;
+            }
+            btn1{
+                color: blueviolet;
+                background-color: darkred;
+                width: auto;
+                height: min-content;
+                text-align: center;
+            }
+            maintop{
+                background-color: aqua;
+                width: 100%;
+                height: 300px;
+            }
+            main {
 
+            }
+        </style>
+        <script>
+
+        </script>
     </head>
     <body>
         
-        <div>
-            <div style="width: 100%; height: 30%; background-color: darkred;" class="content" >
-                <p style="color: rgb(64, 202, 133);" >
-                    안녕하세요
-                </p>
-
+        <div class="maintop">
+            <!--
+                메인 상단
+            -->
+            <div style="width: auto; height: min-content; background-color: darkred;" class="content" >
+                <div class="userbase">
+                    <button class="btn1" type="button" onclick="location.href = 'https://softoasis2022.github.io/page/java1.html'" >
+                        로그인
+                    </button>
+                </div>
             </div>
-            <div>
-                <button class="btn" style="color: blanchedalmond; background-color: blueviolet;" type="button" onclick="location.href = 'https://softoasis2022.github.io/page/java1.html'" >
-                    이동
-                    <!--
-                    홈페이지 이동
-    `               -->
+        </div>
+        <div class="main">
 
-                </button>
-            </div>
         </div>
     </body>
 
