--- a/java.html
+++ b/java.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            웹페이지
+            소프트오아시스
         </title>
         <style>
             userbase{
