--- a/java.html
+++ b/java.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            웹페이지
+            소프트오아시스
         </title>
         <style>
             userbase{
@@ -37,7 +37,7 @@
             -->
             <div style="width: auto; height: min-content; background-color: darkred;" class="content" >
                 <div class="userbase">
-                    <button class="btn1" type="button" onclick="location.href = 'https://softoasis2022.github.io/page/java1.html'" >
+                    <button class="btn1">
                         로그인
                     </button>
                 </div>
