--- a/softoasislandingPage.html
+++ b/softoasislandingPage.html
@@ -13,7 +13,7 @@
         }
         #btn{
             position: absolute;
-            background: url('https://drive.google.com/file/d/1-WHglJw90jkRDdL9fRW6piScaTu_ddwE/view?usp=share_link');
+            background: url('BTS.png');
             width: 173px; 
             height: 55px; 
             bottom : 410px; 
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div>
-        <div id="testImg" style="background: url('https://drive.google.com/file/d/1de38XLxw4rOE7c8exTsVERs3ybItKpb0/view?usp=share_link'); width: 1920px; height: 3465px; ">
+        <div id="testImg" style="background: url('softoasispage.png'); width: 1920px; height: 3465px; ">
             <a href="https://open.kakao.com/o/sRW7uRsadsadGdf" id="btn"> </a>
         </div>
     </div>
