--- a/softoasislandingPage.html
+++ b/softoasislandingPage.html
@@ -13,7 +13,7 @@
         }
         #btn{
             position: absolute;
-            background: url('BTS.png');
+            background: url('https://softoasis2022.github.io/page/BTS.png');
             width: 173px; 
             height: 55px; 
             bottom : 410px; 
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div>
-        <div id="testImg" style="background: url('softoasispage.png'); width: 1920px; height: 3465px; ">
+        <div id="testImg" style="background: url('https://softoasis2022.github.io/page/softoasispage.png'); width: 1920px; height: 3465px; ">
             <a href="https://open.kakao.com/o/sRW7uRsadsadGdf" id="btn"> </a>
         </div>
     </div>
