--- a/softoasislandingPage.html
+++ b/softoasislandingPage.html
@@ -8,8 +8,8 @@
     <style>
         #testImg{
             position: relative;
-            width: 1920px; 
-            height: 3465px;
+            width: 100%; 
+            height: 100%;
         }
         #btn{
             position: absolute;
