--- a/softoasislandingPage.html
+++ b/softoasislandingPage.html
@@ -25,7 +25,7 @@
 <body>
     <div>
         <div id="testImg" style="background: url('https://softoasis2022.github.io/page/softoasispage.png'); width: 1920px; height: 3465px; ">
-            <a href="https://open.kakao.com/o/sRW7uRsadsadGdf" id="btn"> </a>
+            <a href="https://open.kakao.com/o/srepThmf" id="btn"> </a>
         </div>
     </div>
 </body>
